--- a/VisualStudioMac.GetGitUrl/VisualStudioMac.GetGitUrl.csproj
+++ b/VisualStudioMac.GetGitUrl/VisualStudioMac.GetGitUrl.csproj
@@ -1,15 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <OutputPath>.\bin</OutputPath>
+        <!-- <OutputPath>.\bin</OutputPath> -->
         <SupportedOSPlatformVersion>10.14</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
-        <PackageReference Include="Microsoft.VisualStudioMac.Sdk" Version="17.0.0-preview.7955" />
-
         <Reference Include="Xamarin.Mac">
             <HintPath>\Applications\Visual Studio %28Preview%29.app\Contents\MonoBundle\Xamarin.Mac.dll</HintPath>
             <Private>False</Private>
@@ -18,5 +16,8 @@
   <ItemGroup>
     <None Remove="VisualStudioMac.ExtensionsHelper" />
     <None Remove="VisualStudioMac.ExtensionHelper" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudioMac.Sdk" Version="17.5.0" />
   </ItemGroup>
 </Project>
